minotaur/microservices/notification/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: < METADATA-NAME >
  labels:
    app: < METADATA-LABELS >
spec:
  replicas: < REPLICAS >
  selector:
    matchLabels:
      app: < SELECTOR-MATCH >
  template:
    metadata:
      labels:
        app: < TEMPLATE-LABELS >
    spec:
      containers:
        - name: < CONTAINERS-NAME >
          image: < REGISTRY / IMAGE >
          ports:
            - containerPort: < CONTAINERS-PORT >
          imagePullPolicy: < IMAGEPULLPLPLICY >
