minotaur/microservices/notification/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minotaur-notification
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - < HOST >
      secretName: < SECRETNAME >
  rules:
    - host: < HOST >
      http:
        paths:
          - path: < PATH >
            pathType: < PATHTYPE >
            backend:
              service:
                name: < SERVICENAME >
                port:
                  number: < PORT >
